objects/SDIC_Code__c.object
<CustomObject>
    <description>Start with error code number</description>
    <fields>
        <fullName>Code_Description_DE_2__c</fullName>
        <label>Code Description DE 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code_Description_DE__c</fullName>
        <label>Code Description DE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code_Description_EN_2__c</fullName>
        <label>Code Description EN 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code_Description_EN__c</fullName>
        <label>Code Description EN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code_Type_DE__c</fullName>
        <label>Code Type DE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code_Type_EN__c</fullName>
        <label>Code Type EN</label>
        <type>TextArea</type>
    </fields>
    <label>PT - SDIC Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code_Description_DE__c</columns>
        <columns>Code_Description_EN__c</columns>
        <columns>Code_Type_DE__c</columns>
        <columns>Code_Type_EN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Correction_Codes</fullName>
        <columns>NAME</columns>
        <columns>Code_Description_DE__c</columns>
        <columns>Code_Description_EN__c</columns>
        <columns>Code_Type_EN__c</columns>
        <columns>Code_Type_DE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SDIC_Code__c.Correction_code</value>
        </filters>
        <label>Correction Codes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Diagnosis_Codes</fullName>
        <columns>NAME</columns>
        <columns>Code_Description_DE__c</columns>
        <columns>Code_Description_EN__c</columns>
        <columns>Code_Type_DE__c</columns>
        <columns>Code_Type_EN__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SDIC_Code__c.Error_Code</value>
        </filters>
        <label>Diagnosis Codes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SDIC Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SDIC Codes</pluralLabel>
    <recordTypes>
        <fullName>Correction_code</fullName>
        <active>true</active>
        <description>Create a correction code which should solve the problem.</description>
        <label>Correction Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>Error_Code</fullName>
        <active>true</active>
        <description>Code which describes the error.</description>
        <label>Diagnosis Code</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>